# portfolio_project

./: pyproject.toml
about/: models.py
about/migrations/: 0001_initial.py  0002_alter_partners_options_alter_partners_name.py  0003_partners_active.py  0004_alter_partners_options_remove_partners_name.py
account/: forms.py  models.py  urls.py  views.py
account/templates/account/: login.html  profile.html  registration.html  user-list.html
arrangements/: models.py
arrangements/migrations/: 0001_initial.py
core/: settings.py  urls.py
dashboard/: urls.py  views.py
dashboard/forms/: about_form.py  contact_form.py  email_form.py  icons_form.py  phone_form.py  portfolio_form.py  service_form.py  slider_form.py  social_network_form.py  team_form.py
dashboard/templates/: 404.html  500.html
dashboard/templates/dashboard/: base.html  index.html
dashboard/templates/dashboard/about/: about.html
dashboard/templates/dashboard/business-plan/: add-business-plan.html  business-plan.html  update-business-plan.html
dashboard/templates/dashboard/inc/: _message.html  _nav.html  _sidebar.html
portfolio/: models.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py  0002_alter_portfolio_slug.py
portfolio/templates/portfolio/: index.html
services/: models.py
services/migrations/: 0001_initial.py
slider/: models.py
slider/migrations/: 0001_initial.py
team/: models.py
team/migrations/: 0001_initial.py
templates/: base.html
templates/inc/: _footer.html  _nav.html
testimation/: apps.py  models.py
testimation/migrations/: 0001_initial.py
(+43 files in other folders)
